Отладил метод проверки пересечение   testTaskTimeIntersection